# realsense-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md  capture_images.rs  capture_images_async.rs  pose.rs  reset_devices.rs  simple.rs
realsense-sys/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
realsense-sys/bindings/: bindings.rs
realsense-sys/c/: rsutil_delegate.c  rsutil_delegate.h
realsense-sys/src/: lib.rs
src/: base.rs  common.rs  config.rs  context.rs  device.rs  device_hub.rs  device_list.rs  error.rs  frame.rs  frame_kind.rs  frame_queue.rs  kind.rs  lib.rs  options.rs  pipeline.rs  pipeline_kind.rs  pipeline_profile.rs  pose_data.rs  processing_block.rs  processing_block_kind.rs  processing_block_list.rs  sensor.rs  sensor_kind.rs  sensor_list.rs  stream_profile.rs  stream_profile_data.rs  stream_profile_kind.rs  stream_profile_list.rs  types.rs
tests/: device_test.rs  test.rs
