[package]
name = "realsense-rust"
description = "High-level RealSense library in Rust"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/realsense-sys/"
homepage = "https://github.com/jerry73204/realsense-rust"
repository = "https://github.com/jerry73204/realsense-rust"

[dependencies]
realsense-sys = { version = "^0.1.1", path = "realsense-sys" }
num-derive = "^0.3.0"
num-traits = "^0.2.11"
nalgebra = "^0.19.0"
futures = "^0.3.4"

[dev-dependencies]
tokio = { version  = "0.2.11", features = [] }
failure = "0.1.6"
lazy_static = "^1.4.0"
