[package]
name = "realsense-rust"
description = "High-level RealSense library in Rust"
version = "0.5.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/realsense-rust/"
homepage = "https://github.com/jerry73204/realsense-rust"
repository = "https://github.com/jerry73204/realsense-rust"

[dependencies]
realsense-sys = { version = "0.3.0", path = "realsense-sys" }
num-derive = "0.3"
num-traits = "0.2"
nalgebra = { version = "0.23", optional = true }
futures = "0.3"
image = { version = "0.23", optional = true }
safe-transmute = "0.11"

[dev-dependencies]
tokio = { version  = "0.3", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
lazy_static = "1.4"
kiss3d = "0.27"
crossbeam = "0.8"

[features]
default = ["with-nalgebra", "with-image"]
buildtime-bindgen = ["realsense-sys/buildtime-bindgen"]
device-test = []
with-nalgebra = ["nalgebra"]
with-image = ["image"]
doc-only = ["realsense-sys/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
