[package]
name = "realsense-sys"
description = "Use RealSense SDK C library as crate"
version = "0.2.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/realsense-sys/"
homepage = "https://github.com/jerry73204/realsense-rust"
repository = "https://github.com/jerry73204/realsense-rust"

[dependencies]


[build-dependencies]
bindgen = { version = "^0.42.1", optional = true }
failure = "^0.1.6"

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
pkg-config = { version = "^0.3.17", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = "^0.2.8", optional = true }

[features]
default = []
buildtime-bindgen = ["bindgen", "pkg-config", "vcpkg"]
