[package]
name = "realsense-sys"
description = "Use RealSense SDK C library as crate"
version = "0.3.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/realsense-sys/"
homepage = "https://github.com/jerry73204/realsense-rust"
repository = "https://github.com/jerry73204/realsense-rust"

[dependencies]


[build-dependencies]
bindgen = { version = "0.54", optional = true }
cc = { version = "1.0", features = ["parallel"] }

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
pkg-config = { version = "0.3"  }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = "0.2" }

[features]
default = []
buildtime-bindgen = ["bindgen"]
doc-only = []

[package.metadata.docs.rs]
features = ["doc-only"]
